--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Mon nom - Traduction et Technologies de la Traduction</title>
+    <title>Nom - Lorem ipsum dolor sit amet, consectetur adipiscing elit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
